# carina

./: CLAUDE.md  Cargo.toml  README.md  TODO.md  justfile
scripts/: import-papis.py
src/: config.rs  fetch.rs  import_polaris.rs  index.rs  main.rs  metadata.rs  model.rs  storage.rs  theme.rs  tui.rs  validate.rs
themes/: catppuccin-frappe.toml  catppuccin-mocha.toml  gruvbox.toml  kanagawa.toml  rose-pine.toml  tokyo-night-moon.toml
