[package]
name = "grim"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossterm = { version = "0.28", features = ["use-dev-tty"] }
dirs = "6"
lopdf = "0.34"
nucleo-matcher = "0.3"
quick-xml = "0.37"
ratatui = "0.30"
regex = "1"
reqwest = { version = "0.12", features = ["blocking"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
slug = "0.1"
tempfile = "3"
toml = "0.8"
urlencoding = "2.1.3"
